--- a/app/src/main/res/layout/item_carrusel_icon.xml
+++ b/app/src/main/res/layout/item_carrusel_icon.xml
@@ -6,10 +6,26 @@
     android:layout_margin="8dp"
     android:elevation="4dp">
 
-    <ImageView
-        android:id="@+id/imageViewIcon"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_gravity="center"
-        android:scaleType="centerInside"/>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:gravity="center">
+
+        <ImageView
+            android:id="@+id/imageViewIcon"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:scaleType="centerInside"/>
+
+        <TextView
+            android:id="@+id/textViewIconName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:textSize="12sp"
+            android:textColor="@android:color/black"
+            android:gravity="center"/>
+
+    </LinearLayout>
 </androidx.cardview.widget.CardView>
