--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -32,7 +32,7 @@
     <fragment
         android:id="@+id/alquileresFragment"
         android:name="com.aem.gestionalquileres.fragmentos.AlquileresFragment"
-        android:label="Alquileres"
+        android:label="Lista de Alquileres"
         tools:layout="@layout/fragment_alquileres">
         <action
             android:id="@+id/action_alquileresFragment_to_detalleAlquilerFragment"
